...
    
    // MARK: - Helpers
    
    static let sunday = NSLocalizedString("Sun", comment: "Sunday abbreviated")
    static let monday = NSLocalizedString("Mon", comment: "Monday abbreviated")
    static let tuesday = NSLocalizedString("Tue", comment: "Tuesday abbreviated")
    static let wednesday = NSLocalizedString("Wed", comment: "Wednesday abbreviated")
    static let thursday = NSLocalizedString("Thu", comment: "Thursday abbreviated")
    static let friday = NSLocalizedString("Fri", comment: "Friday abbreviated")
    static let saturday = NSLocalizedString("Sat", comment: "Saturday abbreviated")
    
    /// Array of NSLocalizedStrings just for label purposes
    static let dayInitials = [sunday, monday, tuesday, wednesday, thursday, friday, saturday]
...
    static let savePhotoLocalizedString = NSLocalizedString("  Save Photo", comment: "save photo button title")
    
    /// Localized String for Nickname
    static let nicknameLocalizedString = NSLocalizedString("Nickname", comment: "plant nickname")
    
    /// Localized String for Type of plant
    static let typeOfPlantLocalizedString = NSLocalizedString("Type of plant", comment: "plant's type")
    
    /// Localized String for Water/Agua. Main action default
    static let waterLocalizedString = NSLocalizedString("Water", comment: "water, default main action")
    
    /// Localized String for water/agua (noun).
    static let waterNounLocalizedString = NSLocalizedString("water", comment: "water, as a noun")
...
