...
        if plant != nil {
            plantButton.setTitle("Edit Plant", for: .normal)
            //plantButton.backgroundColor = .systemBlue
            plantButton.performFlare()
        }
        else {
            plantButton.setTitle("Add Plant", for: .normal)
            //plantButton.backgroundColor = .systemGreen
            plantButton.performFlare()
        }
    }
}

